fix: change strange double arguments to float